# panel-gtk

./: .buildconfig  CONTRIBUTING.md  configure.ac  panel-gtk.doap
data/: Makefile.am  panel-gtk.pc.in
data/icons/: COPYING  Makefile.am
src/: Makefile.am  panel-gtk.h  pnl-animation.c  pnl-animation.h  pnl-dock-bin-edge-child.c  pnl-dock-bin-edge-private.h  pnl-dock-bin-edge.c  pnl-dock-bin-edge.h  pnl-dock-bin.c  pnl-dock-bin.h  pnl-dock-edge-child.c  pnl-dock-edge-child.h  pnl-dock-edge.h  pnl-dock-group.c  pnl-dock-group.h  pnl-dock-header.c  pnl-dock-header.h  pnl-dock-item.c  pnl-dock-item.h  pnl-dock-manager.c  pnl-dock-manager.h  pnl-dock-overlay-edge.c  pnl-dock-overlay.c  pnl-dock-overlay.h  pnl-dock-paned.c  pnl-dock-paned.h  pnl-dock-private.h  pnl-dock-revealer.c  pnl-dock-revealer.h  pnl-dock-stack.c  pnl-dock-stack.h  pnl-dock-transient-grab.c  pnl-dock-types.h  pnl-dock-widget.c  pnl-dock-widget.h  pnl-dock.c  pnl-dock.h  pnl-multi-paned.c  pnl-multi-paned.h  pnl-panel.c  (+16 more)
src/pnl/: .gitignore  DESIGN.md  Makefile  pnl-animation.c  pnl-animation.h  pnl-dock-bin-edge-child-private.h  pnl-dock-bin-edge-child.c  pnl-dock-bin-edge-private.h  pnl-dock-bin-edge.c  pnl-dock-bin.c  pnl-dock-bin.h  pnl-dock-edge-child-private.h  pnl-dock-edge-child.c  pnl-dock-edge.c  pnl-dock-edge.h  pnl-dock-group.c  pnl-dock-group.h  pnl-dock-item.c  pnl-dock-item.h  pnl-dock-manager.c  pnl-dock-manager.h  pnl-dock-overlay-edge.c  pnl-dock-overlay.c  pnl-dock-overlay.h  pnl-dock-paned.c  pnl-dock-paned.h  pnl-dock-stack.c  pnl-dock-stack.h  pnl-dock-types.h  pnl-dock-widget.c  pnl-dock-widget.h  pnl-dock-window.c  pnl-dock-window.h  pnl-dock.c  pnl-dock.h  pnl-frame-source.h  pnl-tab-strip.c  pnl-tab-strip.h  pnl-tab.c  pnl-tab.h  (+4 more)
